Completed assignment6 and pushed changes